count first, aggregate later

--- a/Toronto_restaurant_location_analysis.ipynb
+++ b/Toronto_restaurant_location_analysis.ipynb
@@ -53,7 +53,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Propose solution by using foursquare location database\n",
+    "# 2. Data\n",
+    "### Propose solution by using foursquare location database\n",
     "\n",
     "Follow our previous research about [Toronto neighborhood](https://github.com/kembox/Coursera_Capstone/blob/master/toronto_neighborhoods.ipynb) , we'll reuse location data for Toronto borough/neighborhood to feed to foursquare [search API](https://developer.foursquare.com/docs/api/venues/search) with specific [categoryId](https://developer.foursquare.com/docs/resources/categories) to get following info for each area ( borough that has its own postal code ): \n",
     "\n",
@@ -66,6 +67,174 @@
     "\n",
     "Base on the data mentioned above, we can run a classification model to divide Toronto borough into different types based on their \"suitable level\" of being our restaurant location. \n",
     "Most likely that the location that can satisfy all our factors will have high cost or even ran out of available place for rent. Classify them well will give us more options to choose to fit our initial budget."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Methodology\n",
+    "Main component of the report where we do the job for collecting and processing data explained above, fit them to a classification model and visualize the results so we can use it to get answer of our business problem\n",
+    "\n",
+    "## 3.1 Collect and process data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Install and  Import needed lib "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Install and import BeautifulSoup library to parse XML data above\n",
+    "!pip3 --quiet install bs4\n",
+    "\n",
+    "#import needed lib\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "pd.set_option('display.max_columns',None)\n",
+    "pd.set_option('display.max_rows',None)\n",
+    "import requests\n",
+    "import numpy as np\n",
+    "from sklearn.cluster import KMeans \n",
+    "\n",
+    "import matplotlib.cm as cm\n",
+    "import matplotlib.colors as colors\n",
+    "\n",
+    "from geopy.geocoders import Nominatim\n",
+    "\n",
+    "!pip3 --quiet install folium\n",
+    "import folium\n",
+    "\n",
+    "import foursquare"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Download Toronto location data \n",
+    "The data which was collected from wikipedia and processed by method explained [here](https://github.com/kembox/Coursera_Capstone/blob/master/toronto_neighborhoods.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/kembox/Coursera_Capstone/master/toronto_data.csv -O toronto_data.csv --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PostCode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M4E</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>The Beaches</td>\n",
+       "      <td>43.676357</td>\n",
+       "      <td>-79.293031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M4K</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>The Danforth West, Riverdale</td>\n",
+       "      <td>43.679557</td>\n",
+       "      <td>-79.352188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M4L</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>The Beaches West, India Bazaar</td>\n",
+       "      <td>43.668999</td>\n",
+       "      <td>-79.315572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M4M</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>Studio District</td>\n",
+       "      <td>43.659526</td>\n",
+       "      <td>-79.340923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M4N</td>\n",
+       "      <td>Central Toronto</td>\n",
+       "      <td>Lawrence Park</td>\n",
+       "      <td>43.728020</td>\n",
+       "      <td>-79.388790</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  PostCode          Borough                    Neighborhood   Latitude  \\\n",
+       "0      M4E     East Toronto                     The Beaches  43.676357   \n",
+       "1      M4K     East Toronto    The Danforth West, Riverdale  43.679557   \n",
+       "2      M4L     East Toronto  The Beaches West, India Bazaar  43.668999   \n",
+       "3      M4M     East Toronto                 Studio District  43.659526   \n",
+       "4      M4N  Central Toronto                   Lawrence Park  43.728020   \n",
+       "\n",
+       "   Longitude  \n",
+       "0 -79.293031  \n",
+       "1 -79.352188  \n",
+       "2 -79.315572  \n",
+       "3 -79.340923  \n",
+       "4 -79.388790  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Load data to a dataframe\n",
+    "toronto_data=pd.read_csv('toronto_data.csv',index_col=None)\n",
+    "toronto_data.head()"
    ]
   },
   {
