--- a/toronto_neighborhoods.ipynb
+++ b/toronto_neighborhoods.ipynb
@@ -544,48 +544,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2019-05-26 14:00:00--  https://cocl.us/Geospatial_data\n",
-      "Resolving cocl.us (cocl.us)... 161.202.50.39\n",
-      "Connecting to cocl.us (cocl.us)|161.202.50.39|:443... connected.\n",
-      "HTTP request sent, awaiting response... 301 Moved Permanently\n",
-      "Location: https://ibm.box.com/shared/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv [following]\n",
-      "--2019-05-26 14:00:02--  https://ibm.box.com/shared/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
-      "Resolving ibm.box.com (ibm.box.com)... 103.116.4.197\n",
-      "Connecting to ibm.box.com (ibm.box.com)|103.116.4.197|:443... connected.\n",
-      "HTTP request sent, awaiting response... 301 Moved Permanently\n",
-      "Location: /public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv [following]\n",
-      "--2019-05-26 14:00:02--  https://ibm.box.com/public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
-      "Reusing existing connection to ibm.box.com:443.\n",
-      "HTTP request sent, awaiting response... 301 Moved Permanently\n",
-      "Location: https://ibm.ent.box.com/public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv [following]\n",
-      "--2019-05-26 14:00:03--  https://ibm.ent.box.com/public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
-      "Resolving ibm.ent.box.com (ibm.ent.box.com)... 103.116.4.211\n",
-      "Connecting to ibm.ent.box.com (ibm.ent.box.com)|103.116.4.211|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://public.boxcloud.com/d/1/b1!DeXW9p8kgNUvFCDzNrpeqOIythycmyIp8laJm-GwwQeTMEkAKIpu-bz1pgetEYfNNKREuip7pB9nVRb4ADkHwb7ehZ4K1oN9hqGe-zea9_YrlQ9BQ2iyPJV-ELLMxB8jO1YnD46nJmafV6ol3Kga52TfYGgD5Anp3Ertr2ULyJLKxLrrvETmXEZEwmEhg-WA3X0b3EY8-XqSCGdLyaBo4eAgo0KZi7S8CZD5F91K33v4OmHYBselesE9DP_Ncbul_T-liCKUuZ7T8vPDxP-8tryJ4so2MgVIF1IVAuDGvxKB5YFLiHnnAfuLtrc1o8JOSHqhoBmu8-fHYEDfZDygGzmGz3L-h1fdrO-j5VCgTC6sKl9yr6Ft9_KxsLUcKNyrGSonMDOYxAy8dItv7cUIhHgaLzGeDMjIPI0HB9zXKDpFjXxyQ8nFInN4rHod_JRI7ehRwQ4UQWn5QqhpU-qKlpNnc2w3Tc5qeca1coI81nOxiD56XCkPyDhOc_xmg2NmZUEvk_iu8Ey5mNTKKt3atkZ8KERns4Rh-ic27-Reb20F-P0RW6YLkr4pV-ISrRTBSGfAou_DGvf7T6hAEjLvxLHaQCo6JikcA1WNjhhzqxznWVkbuVVtKOatzQ_0kO9h1pb90vUxrev8t1BGKNQeE-ONY89TpvvnjMxOkz-rTd4WdlrzTGTpBae5LFuHmL_VK-tPHdIysQbEGXblpTG4u7J-_tdGK3bFyqkO4LRdG0VqgRWEy6jJjzfZ9GNIA7lRS6bOLK8wIdXMYmpdMcrFz5WjW25NIjWvCIW1EH7Yj1mjijV50DUwk9tjurZLowI0pvS3k9RtPT_Mukn2ZXdyCeWSCc4ohyeOyzJaxYnLs-0TFIHW-ZsUi37Xm2IPP8spnObySK5wK7qySxovYPpWX0QoXC43BQyQRPHQXRzNq9COwI8pwqWwaQRtPnKlx8rR5lfJW0n2S7lzOlDlf8u5UAUpUCBo8Rn23G7ty6vM7Bxzp9sjSxulS4EyPcXTgFBSJeLmBlLHkKTbFxOv_JWqxinSShAF01KbKPORhzJP8j1b5xvociuaNSinXYeV0hZQ-L2BTU0bSp7OiumdGBP9hNa5EvcQQnuQHpM6CfN0NDfriHcN5X2tSpjvwqaM9PEaQ-vnnipPtQSclE_vZ6s5XD6URt4HHB9f2rsDOJjvrsi64-mB3uyszu_lwW8FEdtReu0NyvUWioVPCIKQsk5tatQnSwrttCsj9GHzAwck-N3G3809IVGmY20Z1YEHounIMmeCI86Q7W7xmvaMCTWWMOC1vCrWLd4QjY34uWRDO5XJvR8zUHcg7a6-ASQkDG-ljjduzeDnSLGFarMWTqCKaQAGULRclxkj1CtT69mU-xlJOVPZZ2O40MDDpQqq/download [following]\n",
-      "--2019-05-26 14:00:04--  https://public.boxcloud.com/d/1/b1!DeXW9p8kgNUvFCDzNrpeqOIythycmyIp8laJm-GwwQeTMEkAKIpu-bz1pgetEYfNNKREuip7pB9nVRb4ADkHwb7ehZ4K1oN9hqGe-zea9_YrlQ9BQ2iyPJV-ELLMxB8jO1YnD46nJmafV6ol3Kga52TfYGgD5Anp3Ertr2ULyJLKxLrrvETmXEZEwmEhg-WA3X0b3EY8-XqSCGdLyaBo4eAgo0KZi7S8CZD5F91K33v4OmHYBselesE9DP_Ncbul_T-liCKUuZ7T8vPDxP-8tryJ4so2MgVIF1IVAuDGvxKB5YFLiHnnAfuLtrc1o8JOSHqhoBmu8-fHYEDfZDygGzmGz3L-h1fdrO-j5VCgTC6sKl9yr6Ft9_KxsLUcKNyrGSonMDOYxAy8dItv7cUIhHgaLzGeDMjIPI0HB9zXKDpFjXxyQ8nFInN4rHod_JRI7ehRwQ4UQWn5QqhpU-qKlpNnc2w3Tc5qeca1coI81nOxiD56XCkPyDhOc_xmg2NmZUEvk_iu8Ey5mNTKKt3atkZ8KERns4Rh-ic27-Reb20F-P0RW6YLkr4pV-ISrRTBSGfAou_DGvf7T6hAEjLvxLHaQCo6JikcA1WNjhhzqxznWVkbuVVtKOatzQ_0kO9h1pb90vUxrev8t1BGKNQeE-ONY89TpvvnjMxOkz-rTd4WdlrzTGTpBae5LFuHmL_VK-tPHdIysQbEGXblpTG4u7J-_tdGK3bFyqkO4LRdG0VqgRWEy6jJjzfZ9GNIA7lRS6bOLK8wIdXMYmpdMcrFz5WjW25NIjWvCIW1EH7Yj1mjijV50DUwk9tjurZLowI0pvS3k9RtPT_Mukn2ZXdyCeWSCc4ohyeOyzJaxYnLs-0TFIHW-ZsUi37Xm2IPP8spnObySK5wK7qySxovYPpWX0QoXC43BQyQRPHQXRzNq9COwI8pwqWwaQRtPnKlx8rR5lfJW0n2S7lzOlDlf8u5UAUpUCBo8Rn23G7ty6vM7Bxzp9sjSxulS4EyPcXTgFBSJeLmBlLHkKTbFxOv_JWqxinSShAF01KbKPORhzJP8j1b5xvociuaNSinXYeV0hZQ-L2BTU0bSp7OiumdGBP9hNa5EvcQQnuQHpM6CfN0NDfriHcN5X2tSpjvwqaM9PEaQ-vnnipPtQSclE_vZ6s5XD6URt4HHB9f2rsDOJjvrsi64-mB3uyszu_lwW8FEdtReu0NyvUWioVPCIKQsk5tatQnSwrttCsj9GHzAwck-N3G3809IVGmY20Z1YEHounIMmeCI86Q7W7xmvaMCTWWMOC1vCrWLd4QjY34uWRDO5XJvR8zUHcg7a6-ASQkDG-ljjduzeDnSLGFarMWTqCKaQAGULRclxkj1CtT69mU-xlJOVPZZ2O40MDDpQqq/download\n",
-      "Resolving public.boxcloud.com (public.boxcloud.com)... 107.152.24.200, 107.152.25.200\n",
-      "Connecting to public.boxcloud.com (public.boxcloud.com)|107.152.24.200|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 2891 (2.8K) [text/csv]\n",
-      "Saving to: ‘Geospatial_data’\n",
-      "\n",
-      "Geospatial_data     100%[===================>]   2.82K  --.-KB/s    in 0s      \n",
-      "\n",
-      "2019-05-26 14:00:05 (88.9 MB/s) - ‘Geospatial_data’ saved [2891/2891]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!wget https://cocl.us/Geospatial_data -O Geospatial_data"
+    "!wget https://cocl.us/Geospatial_data -O Geospatial_data -q"
    ]
   },
   {
@@ -597,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +652,7 @@
        "4 -79.239476  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
